# haskell-skeleton

./: .gitignore  LICENSE  Setup.hs  build.sh  decafc.cabal  make-tarball.sh  run.sh  setup.sh
alex/: AlexTemplate  AlexTemplate-debug  AlexTemplate-ghc  AlexTemplate-ghc-debug  AlexTemplate-ghc-nopred  AlexWrapper-6.035  AlexWrapper-basic
src/: .gitignore  CLI.hs  Configuration.hs  Main.hs  Parser.y  Scanner.x
src/Configuration/: Types.hs
src/Scanner/: Pretty.hs
