-- Copyright (C) 2013, 2014  Benjamin Barenblat <bbaren@mit.edu>
--
-- This file is a part of decafc.
--
-- decafc is free software: you can redistribute it and/or modify it
-- under the terms of the MIT (X11) License as described in the
-- LICENSE file.
--
-- This program is distributed in the hope that it will be useful, but
-- WITHOUT ANY WARRANTY; without even the implied warranty of
-- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the X11
-- license for more details.

cabal-version:       >=1.8
name:                decafc
version:             0.0.0
copyright:           © 2013, 2014 Benjamin Barenblat
author:              Benjamin Barenblat
maintainer:          bbaren@mit.edu
license:             MIT
license-file:        LICENSE
extra-source-files:  alex/AlexWrapper-6.035
build-type:          Simple
tested-with:         GHC==7.10.3

executable decafc
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       CLI
                     , Configuration
                     , Configuration.Types
                     , Parser
                     , Scanner
  ghc-options:         -Wall -O3
  build-depends:       base >=4.5 && <=4.9
                     , array ==0.5.*
                     , split ==0.2.*
                     , transformers ==0.4.*
  build-tools:         alex >=3.0.2
                     , happy


-- Local Variables:
-- mode: Haskell-Cabal
-- fill-column: 70
-- indent-tabs-mode: nil
-- End:
